# webpkit

./: .editorconfig  .gitattributes  .gitignore  .taplo.toml  .workflow-milestones-report.txt  .yamlfmt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md  SECURITY.md  _typos.toml  biome.json  clippy.toml  commitlint.config.mjs  committed.toml  deny.toml  lefthook.yml  mise.toml  package.json  release-please-config.json  release-plz.toml  rustfmt.toml
crates/webpkit/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/webpkit-alloc-count/: Cargo.toml
crates/webpkit-alloc-count/src/: lib.rs
crates/webpkit-archtest/: Cargo.toml
crates/webpkit-archtest/src/: lib.rs
crates/webpkit-bench/: Cargo.toml
crates/webpkit-bench/benches/: animation.rs  decode.rs  encode.rs  kernels.rs  lossy_decode.rs  lossy_encode.rs  match_finding.rs
crates/webpkit-bench/src/: lib.rs
crates/webpkit-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/webpkit-cli/assets/completions/: webp.bash  webp.elvish  webp.fish  webp.powershell  webp.zsh
crates/webpkit-cli/assets/man/: webp-animate.1  webp-completions.1  webp-config.1  webp-convert.1  webp-decode.1  webp-diff.1  webp-doctor.1  webp-encode.1  webp-explain.1  webp-info.1  webp-man.1  webp-mux.1  webp.1
crates/webpkit-cli/src/: bulk.rs  cli.rs  codec.rs  config.rs  diag.rs  diff.rs  doctor.rs  effort.rs  error.rs  format.rs  inspect.rs  io.rs  lib.rs  metadata.rs  personality.rs  preprocess.rs  report.rs  strategy.rs  term.rs
crates/webpkit-cli/src/cli/: brand.rs  cwebp.rs  dwebp.rs
crates/webpkit-cli/src/config/: load.rs  value.rs
crates/webpkit-cli/src/format/: image_input.rs  image_output.rs  png.rs  ppm.rs  raw.rs  yuv.rs
crates/webpkit-cli/tests/: animation.rs  architecture.rs  cli.rs  color.rs  config.rs  convert.rs  dropins.rs  formats.rs  ledger.rs  m8.rs  m9.rs  optimize.rs  snapshot.rs
crates/webpkit-cli/tests/snapshots/: snapshot__cwebp.snap  snapshot__dwebp.snap  snapshot__webp.snap
crates/webpkit-conformance/: Cargo.toml  conformance-results-alpha.json  conformance-results-anim.json
crates/webpkit-conformance/fixtures/alpha/alpha_15x17_lossless_f0/: meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_15x17_lossless_f1/: expected.rgba  meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_15x17_none_f0/: expected.rgba  meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_15x17_none_f1/: meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_16x16_lossless_f0/: meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_16x16_lossless_f1/: meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_16x16_none_f0/: expected.rgba  meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_16x16_none_f1/: expected.rgba  meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_5x9_lossless_f0/: meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_5x9_lossless_f1/: expected.rgba  meta.toml
crates/webpkit-conformance/fixtures/alpha/alpha_5x9_none_f0/: expected.rgba  meta.toml
crates/webpkit-conformance/src/: lib.rs
crates/webpkit-conformance/tests/: decode.rs  ledger.rs
crates/webpkit-fuzz/: Cargo.toml
crates/webpkit-fuzz/fuzz_targets/: decode.rs  decode_frames.rs
crates/webpkit-fuzz/seeds/decode/: README.md
crates/webpkit-fuzz/seeds/decode_frames/: README.md
crates/webpkit-fuzz/tests/: replay_seeds.rs
crates/webpkit-lossless-conformance/: Cargo.toml  conformance-results-lossless.json
crates/webpkit-lossless-conformance/src/: lib.rs
crates/webpkit-lossless-conformance/tests/: animation.rs  conformance.rs  decode.rs  encode.rs  ledger.rs  metadata.rs
crates/webpkit-lossless-fuzz/: Cargo.toml
crates/webpkit-lossless-fuzz/fuzz_targets/: animation.rs  decode.rs  roundtrip.rs
crates/webpkit-lossless-fuzz/src/: lib.rs
crates/webpkit-lossless-fuzz/tests/: replay_seeds.rs
crates/webpkit-lossy-conformance/: Cargo.toml  conformance-results-lossy.json
crates/webpkit-lossy-conformance/src/: lib.rs
crates/webpkit-lossy-conformance/tests/: decode.rs  ledger.rs
crates/webpkit-lossy-fuzz/: Cargo.toml
crates/webpkit-lossy-fuzz/fuzz_targets/: decode.rs  encode.rs  stream.rs
crates/webpkit-lossy-fuzz/seeds/decode/: noise_32x24_q30.vp8
crates/webpkit-lossy-fuzz/seeds/stream/: gradient_17x13_q80.vp8
crates/webpkit-lossy-fuzz/src/: lib.rs
crates/webpkit-lossy-fuzz/tests/: replay_seeds.rs
crates/webpkit-lossy-proptest/: Cargo.toml
crates/webpkit-lossy-proptest/src/: lib.rs
crates/webpkit-samples/: Cargo.toml
crates/webpkit-samples/src/: lib.rs
crates/webpkit/examples/: roundtrip.rs  vs_libwebp.rs  vs_libwebp_template.html
crates/webpkit/src/: alpha.rs  anim.rs  chunk.rs  container.rs  effort.rs  encoder.rs  error.rs  geometry.rs  image.rs  interop.rs  lib.rs  lossless.rs  lossy.rs  mux.rs  optimize.rs  prelude.rs  stream.rs  work_count.rs  yuv.rs
crates/webpkit/src/container/: anim.rs  fourcc.rs  mux.rs  reader.rs  scan.rs  vp8x.rs  writer.rs
crates/webpkit/src/lossless/: animation.rs  bit_io.rs  color_cache.rs  constants.rs  decoder.rs  encoder.rs  histogram.rs  huffman.rs  lz77.rs  prelude.rs  transform.rs  vp8l.rs  work.rs
crates/webpkit/src/lossy/: alpha.rs  bool_dec.rs  bool_enc.rs  constants.rs  decode.rs  decode_incr.rs  decoder.rs  enc_header.rs  encoder.rs  fdct.rs  frame.rs  frame_header.rs  header.rs  idct.rs  loop_filter.rs  mb.rs  perceptual.rs  predict.rs  prelude.rs  prob_opt.rs  quant.rs  rate.rs  reconstruct.rs  rgb_to_yuv.rs  sharp_yuv.rs  token.rs  tokens.rs  trellis.rs  tuning.rs  work.rs  yuv.rs
crates/webpkit/tests/: architecture.rs  conformance_lossy.rs  emit_fixtures.rs  encode_lossy.rs  golden_local.rs  large_roundtrip.rs  oracle.rs  oracle_lossless.proptest-regressions  oracle_lossless.rs  oracle_lossy.rs  oracle_rescale.rs  proptest_lossy.rs
crates/webpkit/tests/fixtures/: checker_16x16_q20.vp8  noise_5x9_q50.rgba  noise_5x9_q50.vp8
xtask/: Cargo.toml
xtask/src/: bench.rs  common.rs  corpus.rs  fixtures.rs  ledger.rs  libwebp.rs  main.rs  metrics.rs  work.rs
(+101 files in other folders)
