[package]
name = "webpkit-alloc-count"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A counting global allocator for webpkit's deterministic peak-memory metrics."
publish = false

[lints]
workspace = true
