[package]
name = "webpkit-archtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Source-scanning primitives shared by the workspace's architecture gates."

[lints]
workspace = true
