[package]
name = "webpkit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line tools for the webpkit WebP codec: libwebp-style cwebp (lossy by default, -lossless for VP8L) / dwebp and the webp brand tool."
keywords = ["webp", "cwebp", "dwebp", "cli", "image"]
categories = ["command-line-utilities", "multimedia::images"]
homepage = "https://github.com/P4suta/webpkit"
documentation = "https://docs.rs/webpkit-cli"
readme = "README.md"
# CLI integration tests + insta snapshots (~45 KB) are dev-only; drop them from the
# published tarball. The binaries and library are all a consumer needs.
exclude = ["tests/"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "webpkit_cli"
path = "src/lib.rs"

[[bin]]
name = "cwebp"
path = "src/bin/cwebp.rs"

[[bin]]
name = "dwebp"
path = "src/bin/dwebp.rs"

[[bin]]
name = "webp"
path = "src/bin/webp.rs"

[dependencies]
# Both arrive with clap already, so naming them directly costs no new crates.
# `anstream` decides per-stream whether ANSI survives; `anstyle` is the vocabulary.
anstream = { workspace = true }
anstyle = { workspace = true }
clap = { workspace = true }
png = { workspace = true }
rayon = { workspace = true }
# The one WebP codec crate: its type-state `Encoder` routes to lossless (VP8L) or
# lossy (VP8) so `cwebp`/`webp` can offer libwebp-style lossy-by-default output,
# and it re-exports the `Image`/`Metadata`/`Effort` types the CLI names.
#
# `rayon` feature on: the CLI binaries evaluate the ~16 `Effort::Best` candidate
# families across the rayon pool. Output stays byte-identical to the serial library
# default; only Best encode wall-clock improves.
webpkit = { path = "../webpkit", version = "0.1.0", features = ["rayon"] }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
