[package]
name = "webpkit-lossless-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Golden-fixture conformance harness for the webpkit-lossless WebP VP8L codec."
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# Reaches the codec module-first (`webpkit::lossless::…`), so it needs the
# `__internals` tooling feature that exposes the internal module tree.
webpkit = { path = "../webpkit", features = ["__internals"] }

[lints]
workspace = true
