[package]
name = "webpkit-lossy-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "cargo-fuzz targets for the webpkit-lossy WebP VP8 (lossy) decoder."
publish = false

[package.metadata]
cargo-fuzz = true

# The targets' bodies live here so `tests/replay_seeds.rs` can call the very code
# the fuzzer runs, instead of a hand-written copy that drifts.
[lib]
name = "webpkit_lossy_fuzz"
path = "src/lib.rs"

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false
# Only linked in a fuzzing build; keeps a normal `cargo build --workspace` from
# emitting this bin (whose name is shared across fuzz crates by cargo-fuzz
# convention) and racing on the same output path.
required-features = ["fuzzing"]

[[bin]]
name = "stream"
path = "fuzz_targets/stream.rs"
test = false
doc = false
bench = false
required-features = ["fuzzing"]

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
bench = false
required-features = ["fuzzing"]

[features]
# Enabled by `cargo fuzz` invocations (pass `--features fuzzing`). Off by default
# so a normal `cargo build --workspace` never links the libFuzzer runtime.
fuzzing = ["dep:libfuzzer-sys"]

[dependencies]
libfuzzer-sys = { workspace = true, optional = true }
webpkit = { path = "../webpkit" }

[lints]
workspace = true
