[package]
name = "webpkit-lossy-proptest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared proptest strategies for testing the webpkit-lossy WebP VP8 (lossy) decoder."
publish = false

[dependencies]
proptest = { workspace = true }
webpkit = { path = "../webpkit" }

[lints]
workspace = true
