[package]
name = "webpkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A pure-Rust WebP codec: lossless (VP8L) and lossy (VP8) behind one decode/encode API."
keywords = ["webp", "image", "codec", "lossless", "lossy"]
categories = ["multimedia::images", "encoding", "no-std"]
homepage = "https://github.com/P4suta/webpkit"
documentation = "https://docs.rs/webpkit"
readme = "README.md"
# Keep the published tarball lean and dependency-free: the integration tests carry
# ~200 KB of golden fixtures + oracle sources that need dev-only path deps
# (`webpkit-samples`, `webpkit-lossy-proptest`) which are stripped on publish, so
# they cannot build from the crate anyway. `examples/roundtrip.rs` stays (it is the
# doc-linked quick-start); `examples/vs_libwebp.rs` is `required-features = ["oracle"]`
# and therefore inert in a default build.
exclude = ["tests/"]

# docs.rs builds the *published* surface only: std baseline + the two optional
# public-facing features (`rayon` swaps in parallelism, `image` adds the TryFrom
# interop impls). Deliberately excludes `oracle`/`bench`/`work-count`/`__internals`
# ā€” these are dev/test-only, gate no public item, and `oracle` would compile the
# libwebp C reference. No `--cfg docsrs`/`doc_cfg`: no listed feature changes a
# public signature, so a feature-badge pass would annotate internal items for no gain.
[package.metadata.docs.rs]
features = ["std", "rayon", "image"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
# Opt-in encoder data-parallelism (rayon). Off by default; every parallel path is
# byte-identical to its serial fallback, so it changes only wall-clock, never output.
rayon = ["dep:rayon", "std"]
# Opt-in interop with the `image` crate: `TryFrom` conversions between
# `image::DynamicImage`/`RgbaImage` and `Image` (see `interop.rs`). Off by default,
# so a plain build keeps the zero-dependency baseline; needs an allocator.
image = ["dep:image", "alloc"]
# Exposes the internal module tree (`lossless`, `lossy`, `container`, `image`,
# `anim`, `stream`, ā€¦) as `#[doc(hidden)] pub` so this workspace's own test &
# tooling crates can reach codec internals module-first. OFF by default and never
# enabled on crates.io / docs.rs: a published build keeps these `pub(crate)`, so
# the curated facade re-exports are the entire public (and semver-committed) API.
# The dev-only `oracle`/`bench`/`work-count` reach-ins imply it.
__internals = []
# Differential oracle: links the libwebp C reference in-process for the
# `tests/oracle*.rs` cross-checks. Dev/test only; never part of a normal build.
oracle = ["dep:libwebp-sys", "__internals"]
# Deterministic algorithmic-work counters (the work-cost measurement plane).
# Off by default: production builds link no counter code and behave identically.
work-count = ["__internals"]
# Dev-only: re-exports internal numeric kernels (and their pre-optimization
# `*_reference` twins) through `crate::{lossless,lossy}::bench` so `webpkit-bench`'s
# `kernels` microbench can time them in isolation. Adds no dependency and no
# production code; never enabled in a real build.
bench = ["__internals"]

[dependencies]
# Optional `image`-crate interop (the `image` feature). `default-features = false`
# keeps it to the buffer/`DynamicImage` types ā€” no image format codecs are pulled ā€”
# so a plain build has zero dependencies and this never enters it.
image = { version = "0.25", optional = true, default-features = false }
libwebp-sys = { workspace = true, optional = true }
# Declared locally (not `workspace = true`) so rayon can never enter a default build.
rayon = { version = "1", optional = true }

[dev-dependencies]
proptest = { workspace = true }
# Self dev-dependency: turns on `__internals` for this crate's own integration
# tests, examples and benches (which reach codec internals module-first) WITHOUT
# adding it to the published lib ā€” dev-dependencies never enter a normal build or a
# downstream consumer's graph, so crates.io / docs.rs keep the facade-only surface.
webpkit = { path = ".", features = ["__internals"] }
webpkit-archtest = { path = "../webpkit-archtest" }
webpkit-lossy-proptest = { path = "../webpkit-lossy-proptest" }
# The shared synthetic corpus, for the in-process comparison report against the
# libwebp C reference (`examples/vs_libwebp.rs`, `oracle` feature).
webpkit-samples = { path = "../webpkit-samples" }

# In-process size/quality/speed comparison vs the libwebp C reference, rendered to a
# self-contained HTML dashboard. Needs the `oracle` feature (libwebp-sys), so it is
# skipped by ordinary `cargo build --examples`.
#   just report-vs-libwebp
[[example]]
name = "vs_libwebp"
required-features = ["oracle"]

[lints]
workspace = true
